<resources>
    <string name="city_name">ListView</string>
    <string-array name="city">
        <item>Mysuru</item>
        <item>Jaipur</item>
        <item>Delhi</item>
    </string-array>

    <string name="red_fort">Red fort</string>
    <string name="qutub_minar">Qutub Minar</string>
    <string name="india_gate">India Gate</string>
    <string name="lotus_temple">Lotus Temple</string>

    <string name="amber_palace">Amber Palace</string>
    <string name="hawa_mahal">Hawa mahal</string>
    <string name="city_palace">City Palace</string>
    <string name="nahargarh_fort">Nahargarh Fort</string>



    <string name="app_name">City Guide</string>
    <string name="places">Places</string>
    <string name="restaurants">Restaurants</string>
    <string name="shopping">Shopping</string>
    <string name="events">Events</string>
    <string name="no_desc_available">No description available</string>
    <string name="more_details">More Details</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="overview">Overview</string>

    <string name="mysore_palace">Mysore Palace</string>
    <string name="venugopalaswamy_temple">Venugopalaswamy Temple</string>
    <string name="grs">GRS Fantasy Park</string>
    <string name="krs">Krishna Raja Sagara</string>
    <string name="bylakuppe">Golden Temple</string>
    <string name="ranganthittu">Ranganthittu Bird Sanctuary</string>

    <string name="mysore_palace_hours">10:00 am - 05:30 pm</string>
    <string name="venugopalaswamy_temple_hours">08:30 am - 04:30 pm</string>
    <string name="grs_hours">10:30 am - 07:00 pm</string>
    <string name="krs_hours">06:30 am - 07:30 pm</string>
    <string name="bylakuppe_hours">09:00 am - 06:00 pm</string>
    <string name="ranganthittu_hours">09:00 am - 06:00 pm</string>

    <string name="mysore_palace_location">Mysore+Palace</string>
    <string name="venugopalaswamy_temple_location">Venugopala+Swamy+Temple</string>
    <string name="grs_location">GRS+Fantasy+Park</string>
    <string name="krs_location">KrishnaRajaSagara+Dam,+Karnataka+571607</string>
    <string name="bylakuppe_location">Namdroling+Monastery+Golden+Temple</string>
    <string name="ranganthittu_location">Ranganathittu+Bird+Sanctuary</string>

    <string name="la_uppu">La Uppu</string>
    <string name="the_barge">The Barge</string>
    <string name="onesta">Onesta</string>
    <string name="indra_cafe">Indra Cafe</string>
    <string name="hotel_mylari">Hotel Mylari</string>
    <string name="old_house">The Old House</string>
    <string name="good_vibes">Cafe Good Vibes</string>
    <string name="frosting_cafe">Frosting Cafe</string>

    <!-- Jaipur restaurants-->
    <string name="house_of_han">House of Han</string>
    <string name="okhra">Okhra</string>
    <string name="dragon_house">Dragon House</string>
    <string name="house_of_han_location">House+of+Han+Jaipur</string>
    <string name="okhra_location">Okhra+restaurant+Jaipur</string>
    <string name="deagon_house">dragon+house+jaipur</string>

    <!--delhi restaurant-->
    <string name="bukhara">Bukhara</string>
    <string name="rajinder_da_dhaba">Rajinder Da Dhaba</string>
    <string name="sagar_ratna">Sagar Ratna</string>


    <string name="onesta_location">Onesta</string>
    <string name="hotel_mylari_location">Hotel+Vinayaka+Original+Mylari</string>
    <string name="the_barge_location">The+Barge</string>
    <string name="la_uppu_location">Grand+Mercure+Mysuru</string>
    <string name="old_house_location">The+Old+House</string>
    <string name="frosting_cafe_location">Frosting+cafe</string>
    <string name="good_vibes_location">Cafe+Good+Vibes</string>
    <string name="indra_cafe_location">Indra+Cafe+Paras+-+Vegetarian+Restaurant</string>

    <string name="indra_cafe_website">http://indracafeparas.com</string>
    <string name="good_vibes_website" />
    <string name="frosting_cafe_website" />
    <string name="old_house_website" />
    <string name="la_uppu_website">https://www.accorhotels.com/gb/hotel-9306-grand-mercure-mysuru-/index.shtml</string>
    <string name="the_barge_website">http://thebarge.in</string>
    <string name="hotel_mylari_website" />
    <string name="onesta_website">http://onestalove.com</string>

    <string name="onesta_phone">08214851479</string>
    <string name="hotel_mylari_phone" />
    <string name="indra_cafe_phone">08212420236</string>
    <string name="the_barge_phone">09741391444</string>
    <string name="la_uppu_phone">08214021212</string>
    <string name="old_house_phone">08212333255</string>
    <string name="frosting_cafe_phone">07022330059</string>
    <string name="good_vibes_phone">08212978124</string>

    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="cafe">Cafe</string>

    <string name="gokulam">Gokulam</string>
    <string name="doora">Doora</string>
    <string name="vijaynagar">Vijaynagar</string>
    <string name="bannimantap">Bannimantap</string>
    <string name="chamrajpura">Chamrajpura</string>

    <string name="mom">Mall of Mysore</string>
    <string name="bmhabitat">BM Habitat Mall</string>
    <string name="garuda">Garuda Mall</string>
    <string name="forum">Forum Mall</string>
    <string name="badsha">Badsha Stores</string>
    <string name="ksic">KSIC Mysore Silk</string>

    <string name="mom_place">MG Road</string>
    <string name="bmhabitat_place">Gokulam</string>
    <string name="garuda_place">Albert Victor Road</string>
    <string name="forum_place">Nazarbad</string>
    <string name="badsha_place">KR Circle</string>
    <string name="ksic_place">Indira Nagar</string>

    <string name="mom_address">M.G. Road, Indira Nagar Extension, Nazarbad Mohalla, Opposite Race Course, Near Mysore Zoo</string>
    <string name="bmhabitat_address">Gokulam Main Road, Jayalakshmirpuram</string>
    <string name="garuda_address">Albert Victor Road, Agrahara</string>
    <string name="forum_address">Hyderali Rd, Nazarbad, Mysuru, Karnataka</string>
    <string name="badsha_address">Shop# 5, Vishveshwarya Bhawan, KR Circle</string>
    <string name="ksic_address">Zoo Main Road, Shalivahana Main Rd, Indira Nagar, Ittige Gudu</string>

    <string name="forum_location">Forum+Centre+City+Mall</string>
    <string name="badsha_location">Badsha+Stores+-+The+Silk+Experience+Since+1965</string>
    <string name="mom_location">Mall+Of+Mysore</string>
    <string name="bmhabitat_location">B+M+Habitat+Mall</string>
    <string name="garuda_location">Garuda+Mall+Mysuru</string>
    <string name="ksic_location">KSIC+Mysore+Silk+Showroom</string>

    <string name="userName">Aadhya Agarwal</string>
    <string name="totalRatings">Read %1$d reviews.</string>
    <string name="rating">%1$.1f/5</string>
    <string name="reviewCount">(%1$s)</string>

    <string name="navikotsava">Navikotsava</string>
    <string name="live_music">Live Music: Between green &amp; me</string>
    <string name="pratigam">Pratigam 2018</string>
    <string name="janmashtami">Sri Krishna Janmashtami</string>
    <string name="marathon">Celebration Mysore &#189; Marathon &amp; 10k</string>


    <string name="navikotsava_place">Kalamandira</string>
    <string name="live_music_place">Cornucopia</string>
    <string name="pratigam_place">SDMIMD</string>
    <string name="janmashtami_place">ISKCON</string>
    <string name="marathon_place">Mysore Palace</string>

    <string name="navikotsava_date">4th Aug</string>
    <string name="live_music_date">4th Aug</string>
    <string name="pratigam_date">18th Aug</string>
    <string name="janmashtami_date">3rd Sept</string>
    <string name="marathon_date">9th Sept</string>

    <string name="navikotsava_time">10:30 am</string>
    <string name="live_music_time">7:00 pm - 10:30 pm</string>
    <string name="pratigam_time">4:00 pm - 9:00 pm</string>
    <string name="janmashtami_time">7:00 am - 12:45 pm</string>
    <string name="marathon_time">5:30 am</string>

    <string name="navikotsava_url">http://www.masthmysore.com/events/navikotsava-2018/</string>
    <string name="live_music_url">http://www.masthmysore.com/events/live-music-green/</string>
    <string name="pratigam_url">http://www.masthmysore.com/events/pratigam-2018/</string>
    <string name="janmashtami_url">http://www.masthmysore.com/events/sri-krishna-janmashtami/</string>
    <string name="marathon_url">http://www.masthmysore.com/events/celebration-mysore-12-marathon-10k/</string>

    <string name="no_phone">Phone number not found.</string>
    <string name="no_website">Website not found.</string>
    <string name="no_location">Unable to locate on the maps.</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Montes nascetur ridiculus mus mauris. Venenatis tellus in metus vulputate eu scelerisque. Urna duis convallis tellus id interdum.\n\nSagittis id consectetur purus ut faucibus pulvinar elementum integer. Eu mi bibendum neque egestas congue quisque egestas diam. Facilisi cras fermentum odio eu feugiat pretium. Sed tempus urna et pharetra pharetra massa. Semper quis lectus nulla at volutpat diam ut venenatis tellus. Mauris pharetra et ultrices neque ornare aenean.</string>
    <string name="dummyReview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="image">image</string>

</resources>
