<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens_200dp"
            android:contentDescription="@string/no_desc_available"
            android:transitionName="restaurantImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="Onesta" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="4.3" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:rating="4.3" />

        <TextView
            android:id="@+id/reviewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="(1,432)" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="Chinese" />

        <TextView
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_directions"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/directions"
            app:layout_constraintEnd_toStartOf="@+id/call"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/call" />

        <TextView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_call"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/call"
            app:layout_constraintEnd_toStartOf="@+id/website"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/directions"
            app:layout_constraintTop_toBottomOf="@+id/reviewCount" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_public"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/call"
            app:layout_constraintTop_toTopOf="@+id/call" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:text="@string/about"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:text="@string/dummy_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>